--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
@@ -8,5 +9,8 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "outDir": "./dist"
+  },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
   }
 }
