--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "bs58": "^6.0.0",
-    "elliptic": "^6.5.6"
+    "elliptic": "^6.5.6",
+    "multicodec": "^3.2.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
